--- a/FastSaver/style.css
+++ b/FastSaver/style.css
@@ -24,14 +24,15 @@ button{
 }
 #obrisiDugme{
     background-color: rgb(255, 255, 255);
-    color: rgb(77, 155, 168);;
+    color: rgb(77, 155, 168);
 }
 #dugmad{
     text-align: center;
 }
 li a{
-    color: rgb(77, 155, 168);
+    color: rgb(35, 79, 87);
     font-size: 12pt;
+    text-decoration: none;
 }
 ul{
     width: 130px;
